--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -3,9 +3,23 @@
 }
 
 .hw {
+    min-height: 336px;
 
+    padding: 32px 70px;
+
+    border: 1px solid #d9d9d9;
+    border-left: none;
+    border-right: none;
 }
 
 .hwTitle {
+    padding-left: 70px;
 
+    margin-bottom: 10px;
+    margin-top: 47px;
+
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 27px;
 }
