--- a/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
+++ b/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
@@ -1,18 +1,35 @@
 .sendForm {
-
+display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 30px;
 }
 
 .textarea {
-
+    width: 976px;
+    height: 40px !important;
+    padding: 10px 20px;
+    background: #F5F7FB;
+    border-radius: 20px;
+    box-shadow: 0 1px 2px 0 #1D21261A,
+    0 5px 20px 0 #1D212608;
+    resize: none;
 }
 
 .button {
-
+    background: #0066CC;
+    color: white;
+    border-radius: 20px;
+    font-size: 16px;
+    line-height: 19px;
+    font-family: 'Montserrat', sans-serif;
+    padding: 8px 35px;
 }
 
 .button:hover {
 
 }
+
 .button:active {
 
 }
