--- a/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
+++ b/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
@@ -1,17 +1,39 @@
 .friendMessage {
-
+    min-height: 77px;
 }
 
 .friendImageAndText {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    position: relative;
 
+}
+
+.friendImageAndText::after {
+    content: '';
+    position: absolute;
+    left: 39px;
+    bottom: 0;
+    height: 0;
+    width: 0;
+    border: 21px solid transparent;
+    border-bottom: 21px solid #F5F7FB;
 }
 
 .friendImageAndText img {
-
+    width: 48px;
+    height: 48px;
 }
 
-.friendText {
 
+.friendText {
+    background: #F5F7FB;
+    margin-right: 12px;
+    border-radius: 10px;
+    color: black;
+    padding: 10px 15px;
+    margin-left: 12px;
 }
 
 .friendText:after {
@@ -19,13 +41,23 @@
 }
 
 .friendName {
-
+    text-align: start;
+    font-family: Montserrat, serif;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 20px;
 }
 
 .friendMessageText {
-
+    font-family: Montserrat, serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
 }
 
 .friendTime {
+    text-align: start;
+    font-size: 10px;
+    padding-left: 10px;
 
 }
