--- a/src/s2-homeworks/hw01/message/Message.module.css
+++ b/src/s2-homeworks/hw01/message/Message.module.css
@@ -1,17 +1,38 @@
 .message {
+    min-height: 77px;
 
 }
 
 .imageAndText {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: end;
+    align-items: center;
+    position: relative;
+}
 
+.imageAndText::before {
+    content: '';
+    position: absolute;
+    right: 39px;
+    bottom: 0;
+    height: 0;
+    width: 0;
+    border: 21px solid transparent;
+    border-bottom: 21px solid #0066CC;
 }
 
 .imageAndText img {
-
+    width: 48px;
+    height: 48px;
 }
 
 .text {
-
+    background: #0066CC;
+    margin-right: 12px;
+    border-radius: 10px;
+    color: white;
+    padding: 10px 15px;
 }
 
 .text:after {
@@ -19,13 +40,24 @@
 }
 
 .name {
-
+    text-align: end;
+    font-family: Montserrat, serif;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 20px;
 }
 
 .messageText {
-
+    font-family: Montserrat, serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
 }
 
 .time {
+    text-align: end;
+    font-size: 10px;
+    padding-right: 10px;
+
 
 }
