--- a/src/s2-homeworks/hw05/header/Header.module.css
+++ b/src/s2-homeworks/hw05/header/Header.module.css
@@ -1,8 +1,22 @@
 .burgerMenuIcon {
+    width: 24px;
+    height: 24px;
 }
 
 .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 70px;
+    background-color: white;
+    height: 60px;
+
 }
 
 .header h1 {
+    font-family: Montserrat, serif;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 29px;
+    text-align: left;
 }
