--- a/src/s2-homeworks/hw06/common/c4-SuperEditableSpan/SuperEditableSpan.module.css
+++ b/src/s2-homeworks/hw06/common/c4-SuperEditableSpan/SuperEditableSpan.module.css
@@ -1,10 +1,26 @@
 .spanBlock {
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    gap: 15px;
+    height: 40px;
 }
 
 .span {
+    font-family: Montserrat, serif;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 19.5px;
+    text-align: left;
+    color: #0080FF;
+
 }
 
 .input {
+    height: 36px;
+    width: 276px;
+    padding-left: 15px;
+    outline: none;
 }
 
 .pen {
