--- a/src/s2-homeworks/hw06/HW6.module.css
+++ b/src/s2-homeworks/hw06/HW6.module.css
@@ -1,4 +1,8 @@
 .buttonsContainer {
+    display: flex;
+    justify-content: start;
+    gap: 20px;
+    margin-top: 10px;
 }
 
 .editableSpanContainer {
