--- a/src/s2-homeworks/hw09/Clock.module.css
+++ b/src/s2-homeworks/hw09/Clock.module.css
@@ -1,14 +1,31 @@
 .buttonsContainer {
+display: flex;
+    gap: 15px;
+    margin-top: 20px;
 }
 
 .clock {
+    width: 200px;
 }
 
 .watch {
+    font-family: Montserrat, serif;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24.38px;
+    text-align: left;
+
 }
 
 .watch strong {
 }
 
 .more {
+    font-family: Montserrat, serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19.5px;
+    text-align: left;
+    color: #00000080;
+
 }
