--- a/src/s2-homeworks/hw11/HW11.module.css
+++ b/src/s2-homeworks/hw11/HW11.module.css
@@ -1,8 +1,16 @@
 .container {
+    display: flex;
+    align-items: start;
+    flex-direction: column;
+    gap: 20px;
 }
 
 .wrapper {
+    display: flex;
+justify-content: center;
+    align-items: center;
 }
 
 .number {
+    margin: 15px;
 }
