--- a/src/s2-homeworks/hw05/header/Header.module.css
+++ b/src/s2-homeworks/hw05/header/Header.module.css
@@ -7,9 +7,12 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 70px;
+    padding: 0 70px;
     background-color: white;
     height: 60px;
+    position: sticky;
+    top: 0;
+    z-index: 2;
 
 }
 
@@ -19,4 +22,5 @@
     font-weight: 600;
     line-height: 29px;
     text-align: left;
+    color: black;
 }
