--- a/src/s2-homeworks/hw13/HW13.module.css
+++ b/src/s2-homeworks/hw13/HW13.module.css
@@ -1,7 +1,14 @@
 .buttonsContainer {
+    display: flex;
+    gap: 20px;
+    margin-bottom: 20px;
 }
 
 .responseContainer {
+    display: flex;
+    gap: 70px;
+    justify-content: start;
+    align-items: center;
 }
 
 .imageContainer {
@@ -10,13 +17,22 @@
 .image {
 }
 
-.textContainer{
+.textContainer {
 }
 
 .code {
+    font-family: Montserrat, serif;
+    font-size: 30px;
+    font-weight: 500;
+    line-height: 36.57px;
+    text-align: left;
+    margin-bottom: 30px;
+
 }
 
 .text {
 }
+
 .info {
+    margin: 0 auto;
 }
