--- a/src/s2-homeworks/hw15/common/c9-SuperPagination/SuperPagination.module.css
+++ b/src/s2-homeworks/hw15/common/c9-SuperPagination/SuperPagination.module.css
@@ -1,11 +1,13 @@
 .pagination {
     display: flex;
+    align-items: center;
+    margin-bottom: 30px;
 }
 
 .text1 {
-
+margin-right: 5px;
 }
 
 .text2 {
-
+margin-left: 5px;
 }
